--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ESNext",
     "rootDir": "./src",
     "outDir": "./lib",
+    "lib": ["ESNext"],
     
     "declaration": true,
     "declarationMap": true,
