--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": ".",
     "outDir": "../lib",
     "lib": ["ESNext"],
-    "module": "ES6",
+    "module": "ESNext",
     "declaration": true,
     "sourceMap": true
   }
