--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": ["ESNext"],
     "module": "ESNext",
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "sourceRoot": "."
   }
 }
